--- a/templates/index.html
+++ b/templates/index.html
@@ -1,45 +1,18 @@
 <html>
     <head>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-        <script>
-            $(document).ready(function() {
-                    setInterval(function() {
-                    cache_clear()
-                    }, 1700);
-            });
-            function cache_clear() {
-              window.location.reload();
-              // window.location.reload(); use this if you do not remove cache
-            }
-        </script>
-
-
-        <meta charset="UTF-8">
-        <title>JMeter Test</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <img src='../static/images/Dhruvi.jpg' width="150" height="150"></center>
     </head>
     <body>
         <div class="container">
-                <div class="jumbotron text-center">
-                    <h1>Welcome to the JMeter Scaling Application</h1>
-                    <p align="right" class="lead">Name: Shashank Gaikaiwari<br/>
-                    Last 4 digits ID: 5812<br/>
-                    CSE 6331, Cloud Computing<br/>	</p>
-                </div>
+                <h1>hellooooo</h1>
             <table class="table table-bordered">
                             <tr>
-                                <th>Name</th>
-                                <th>Time</th>
+                                <th>Dhruvi Vyas</th>
+                                <th>1001516591</th>
+
                             </tr>
-                            {% for result in results %}
-                            <tr>
-                                <td>{{result[0]}}</td>
-                                <td>{{result[1]}}</td>
-                            </tr>
-                             {% endfor %}
-             </table>
-        </div>
-    </body>
-</html>
+                 </table>
+        </div></body></html>
