--- a/templates/index.html
+++ b/templates/index.html
@@ -15,4 +15,41 @@
 
                             </tr>
                  </table>
-        </div></body></html>
+
+    <form action="/search" method="get">
+
+    Enter k<input type="text" name="k" maxlength="200" width="60">
+        <input type="submit" value="search">
+</form>
+
+
+{#  for i in range(len(X)):#}
+{#        print(i)#}
+{#        print(X[i], labels[i])#}
+
+                {% for ar2 in c2 %}
+        <p>{{ ar2[0] }}</p>
+        {% endfor %}
+<table style="width:100%" border=1>
+        <tr>
+          <th>Fare</th>
+          <th>Age</th>
+          <th>Cluster No.</th>
+
+        </tr>
+        {% for ar in ci %}
+        <tr>
+          <td>{{ ar [0] }}</td>
+          <td> {{ ar[1] }} </td>
+          <td> {{ ar[2] }} </td>
+
+        </tr>
+       {% endfor %}
+
+
+      </table>
+
+
+
+    </body>
+</html>
