"table create and insert"

--- a/templates/insert.html
+++ b/templates/insert.html
@@ -15,24 +15,5 @@
 
                             </tr>
                  </table>
-
-    <form action="/search" method="get">
-
-    Enter k<input type="text" name="k" maxlength="200" width="60">
-        <input type="submit" value="search">
-</form>
-
-  <form action="/insert" method="get">
-
-
-        <input type="submit" value="insert">
-</form>
-
-
-
-
-
-
-
-    </body>
-</html>
+            <p>Inserted go to sql server to check</p>
+        </div></body></html>
