--- a/templates/index.html
+++ b/templates/index.html
@@ -27,6 +27,11 @@
 
         <input type="submit" value="insert">
 </form>
+<form action="/select" method="get">
+
+    Enter Cabin Number<input type="text" name="cabin" maxlength="200" width="60">
+        <input type="submit" value="select">
+</form>
 
 
 
