--- a/templates/output.html
+++ b/templates/output.html
@@ -90,7 +90,18 @@
     </div>
 
 
-
+<h1>{{ t[0] }}</h1>
+                 </table>
+            {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            {% for message in messages %}
+                <div class="alert alert-info alert-dismissable" role="alert">
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close"> <span class="glyphicon glyphicon-remove" aria-hidden="false"></span></button>
+                    {{message}}
+                </div>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
 
 
 </div></div></body>
