--- a/templates/output.html
+++ b/templates/output.html
@@ -68,7 +68,8 @@
 
         {% for label in range(label_length) %}
           <h3>Cluster Label :{{ label }}</h3>
-          <h4>Total Count: {{ length_value[label] }}</h4>
+          <h4>Total Count: {{ length_value[label] }}</h4>  <img src='../static/images/s.jpg' width="150" height="150"></center>
+              <img src='../static/images/n.jpg' width="150" height="150"></center>
           <table class="table-striped" class="tmargin">
             <thead>
               <tr>
