--- a/templates/count.html
+++ b/templates/count.html
@@ -15,39 +15,20 @@
 
                             </tr>
                  </table>
+              <div>
 
-    <form action="/search" method="get">
+    <table class="table table-bordered">
+        <tr>
+            <th>
+                Count
+            </th>
+        </tr>
+        <tbody>
 
-    Enter k<input type="text" name="k" maxlength="200" width="60">
-
-        <input type="submit" value="search">
-
-</form>
-
-  <form action="/insert" method="get">
-
-
-        <input type="submit" value="insert">
-</form>
-<form action="/select" method="get">
-
-    Enter Cabin Number<input type="text" name="cabin" maxlength="200" width="60">
-        <input type="submit" value="select">
-</form>
-
-
-********************************************************************
-                    <div>
-    <form action="/count" method="get">
-       Enter mag <input type="text" name="mag">
-
-        <input type="submit" value="count">
-
-    </form>
-</div>
-
-
-
-
-    </body>
-</html>
+        <tr>
+<td>
+    {{ a[0] }}
+</td>
+        </tr>
+        </tbody>
+    </table></div></div></body></html>
