--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,9 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <img src='../static/images/Dhruvi.jpg' width="150" height="150"></center>
     </head>
-    <body>
+    <body font color="blue">
         <div class="container">
-                <h1>hellooooo</h1>
+
             <table class="table table-bordered">
                             <tr>
                                 <th>Dhruvi Vyas</th>
@@ -45,8 +45,39 @@
 
     </form>
 </div>
+****************************************************************************
+            <div>
+<form action="/list" method="get">
+
+          Enter Minimum<input type="text" name="min" maxlength="200" width="60">
+          Enter Maximum<input type="text" name="max" maxlength="200" width="60">
+          Enter Location<input type="text" name="loc" maxlength="200" width="60">
 
 
+<input type="submit" value="list">
+
+  </form>
+            </div>
+   *****************************************************************************
+    <div>
+    <form action="/case" method="get">
+       Enter k <input type="text" name="k">
+
+        <input type="submit" value="case">
+
+    </form>
+</div>
+
+  *******************************************************************************
+<div>
+    <form action="/look" method="get">
+       Enter k <input type="text" name="k">
+         Enter min <input type="text" name="min">
+         Enter max <input type="text" name="max">
+        <input type="submit" value="look">
+
+    </form>
+</div>
 
 
     </body>
