--- a/templates/index.html
+++ b/templates/index.html
@@ -5,16 +5,14 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <img src='../static/images/Dhruvi.jpg' width="150" height="150"></center>
     </head>
-    <body font color="blue">
-        <div class="container">
+    <body>
+       <h1>
+           <font color="blue">
+           Dhruvi Vyas
+           1001516591
+       </h1>
+       </font>
 
-            <table class="table table-bordered">
-                            <tr>
-                                <th>Dhruvi Vyas</th>
-                                <th>1001516591</th>
-
-                            </tr>
-                 </table>
 
     <form action="/search" method="get">
 
